--- a/css/query-style.css
+++ b/css/query-style.css
@@ -1,4 +1,4 @@
-@media  (max-width: 360px){
+/* @media  (max-width: 360px){
     .conteudo-quemSomos{
         height: 200px;
         margin-left: 10%;
@@ -14,29 +14,34 @@
         height: 800px;
 
     }
-} 
+}  */
 
-@media (min-width:1px) and (max-width: 600px)  {
-    
+@media (max-width: 360px)  {
+    .carousel-control-prev{
+        padding-top: 40px;
+    }
+    .carousel-control-next{
+        padding-top: 40px;
+    }
+
+
+    .sobre{
+        background-color: blue;
+        height: 900px;
+
+    }
     #sobre{
-        
-        font-size: 11px;
+        font-size: 10px;
         width: 100%;
         height: 14%;
+        margin-top: 50px;
         
-
-     
     }
     
     .sobre-box{
         transition: 1s;
         height: 800px;
-        width: 100%;
-      
-        
-       
-        
-       
+        width: 100%;   
     }
     .sb{
         font-size: 20px;
@@ -78,23 +83,131 @@
         width: 70;
         height: 10%;
     }
+
     #OqueFazemos-lista{
       
         width: auto;
         font-size: 15px;
-      
         
     }
+
     .dif{
         position: relative;
         bottom: 15%;
         text-align: center;
         left: 10%;
     }
+
     #OqueFazemos-img-direita{
         
         font-size: 10px;
     }
+    
+    li #OqueFazemos-lista{
+    font-size: 5px;
+ }
+ #figure img{
+    width: 100px;
+    height: 100px;
+    bottom: 15%;
+    position: relative;
+    left: 15%;
+ }
+
+
+ #OqueFazemos-lista h2{
+    font-size: 15px;
+ }
+ .contato{
+    height: 300px;
+ }
+ #contato{
+    font-size: 15px;
+
+ }
+ #imgs{
+    position: relative;
+    bottom: 10%;
+   height: 40px;
+   width: 40px;
+ }
+}
+
+
+@media (max-width: 600px)  {
+    
+    #sobre{
+        
+        font-size: 11px;
+        width: 100%;
+        height: 14%;
+    }
+    
+    .sobre-box{
+        transition: 1s;
+        height: 800px;
+        width: 100%;   
+    }
+    .sb{
+        font-size: 20px;
+        text-align: center;
+    }
+    .ler{
+        position: relative;
+        bottom: 10%;
+
+    }
+   #aos{
+    position: relative;
+    top: 15%;
+    
+   }
+    #OqueFazemos{
+        
+        position: relative;
+        top: 100%;
+    }
+    .OqueFazemos-img-direita{
+        position: relative;
+
+       width: 70%;
+     
+       display: flex;
+      
+        font-size: 5px;
+
+    }
+    span{
+        display: flex;
+        position: relative;
+       bottom: 15%;
+       position: relative;
+    }
+   
+    .conteudo-quemSomos{
+        width: 70;
+        height: 10%;
+    }
+
+    #OqueFazemos-lista{
+      
+        width: auto;
+        font-size: 15px;
+        
+    }
+
+    .dif{
+        position: relative;
+        bottom: 15%;
+        text-align: center;
+        left: 10%;
+    }
+
+    #OqueFazemos-img-direita{
+        
+        font-size: 10px;
+    }
+    
     li #OqueFazemos-lista{
     font-size: 5px;
  }
@@ -132,49 +245,40 @@
         font-size: 14px;
         width: 100%;
         height: 14%;
-        
-
-     
     }
     
     .sobre-box{
         height: 800px;
         width: 100%;
-      
-        
-       
-        
-       
     }
+
     .sb{
         font-size: 20px;
         text-align: center;
     }
+
     .ler{
         position: relative;
         bottom: 10%;
-
     }
+
    #aos{
     position: relative;
     top: 15%;
-    
    }
+
     #OqueFazemos{
-        
         position: relative;
         top: 100%;
     }
+
     .OqueFazemos-img-direita{
-        position: relative;
-
+       position: relative;
        width: 70%;
-     
        display: flex;
-      
-        font-size: 5px;
-
+       font-size: 5px;
     }
+
     span{
         display: flex;
         position: relative;
