--- a/css/orcamento.css
+++ b/css/orcamento.css
@@ -76,7 +76,9 @@ button{
     height: 30px;
     width: 100px;
     background-color: #f6019d ;
-    color : #2de2e6 }
+    color : #2de2e6;
+    cursor: pointer;
+}
 #txt{
     margin-top: 5%;
 }
@@ -110,9 +112,10 @@ button{
  li a{
     text-decoration: none;
     color: #f6019d;
-       list-style: none;
-    
- 
+    list-style: none;
+ }
+ li a:hover{
+    color: #2de2e6;
  }
  li {
     list-style-type: none;
