--- a/css/sobre.css
+++ b/css/sobre.css
@@ -11,17 +11,41 @@ html{
 }
 body{
     font-family: 'Courier New', Courier, monospace;
-    background-color: #261447;
+    background-color: #0d0221;
     color: #2de2e6;
     font-size: 20px;
  }
  .nav-fixed{
    z-index: 1000;
-   width: 100%;
-   position: fixed;  
-   top: 3%;
-   margin-top: -2.5em; 
+    width: 100%;
+    position: fixed;  
+    top: 3%;
+    margin-top: -2.5em;
 }
+.menu{
+   margin: 0;
+   position: relative;
+   width: 100%;
+   height: 80px;
+   background-color: #261447;
+   color: #f6019d;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   list-style: none;
+   padding-top: 25px;
+}
+li a{
+   text-decoration: none;
+   color: #f6019d;
+   list-style: none;
+}
+li a:hover{
+   color: #2de2e6;
+}
+li {
+   list-style-type: none;
+ }
 
 .bg-body-tertiary{
    --bs-bg-opacity: none !important;
@@ -49,7 +73,7 @@ body{
 }
 
  .historia{
-    height: 1700px;
+    height: 2400px;
     width: 90%;
     margin-left: 5%;
     margin-top: 30px;
@@ -107,6 +131,7 @@ body{
    width: 25%;
    height: 400px;
    /* background-color: #f7f7f7; */
+   border: #f6019d 2px solid;
 }
 .imagem-criador p{
    color: #f6019d;
@@ -145,26 +170,70 @@ body{
  align-items: center;
  justify-content: center;
 }
-.menu{
-   margin: 0;
-   position: relative;
-   
-   width: 100%;
-   height: 80px;
-   background-color: #0d0221;
-   color: #f6019d;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   list-style: none;
-}
-li a{
-   text-decoration: none;
-   color: #f6019d;
-      list-style: none;
-   
 
-}
-li {
-   list-style-type: none;
+ .equipe{
+   /* background-color: #2de2e6; */
+   width: 100%;
+   height: 100px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-top: 100px;
+   margin-bottom: 70px;
  }
+
+ .conteudo-membros{
+   /* background-color: #f6019c27; */
+   width: 100%;
+   height: 500px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   overflow-y: hidden;
+ }
+ 
+.conteudo-membros .carousel{
+   width: 30%;
+   height: 100%;
+   transition: 1s;
+   border: solid 2px #f6019d;
+   
+}
+.conteudo-membros .carousel:hover{
+   border: solid 2px #2de2e6;
+   transition: 1s;
+}
+
+.carousel-inner{
+   /* background-color: aqua; */
+}
+.carousel-inner img{
+   /* background-color: aqua; */
+   height: 500px;
+   width: 500px;
+}
+.carousel-item{
+   background-color: black;
+}
+.carousel-inner h5{
+   color: #edf2f4;
+}
+.carousel-inner p{
+   color: #edf2f4;
+}
+.carousel-caption{
+   background-color: rgba(0, 0, 0, 0.507);
+   border-radius: 15px;
+   transition: 1s;
+}
+.carousel-caption:hover{
+   background-color: rgba(0, 0, 0, 0.767);
+}
+
+.carousel-control-prev{
+   background-color:  #edf2f434;
+}
+.carousel-control-next{
+   background-color:  #edf2f431;
+}
+
