--- a/css/sobre.css
+++ b/css/sobre.css
@@ -51,7 +51,7 @@ li {
    --bs-bg-opacity: none !important;
 }
 .container-fluid{
-   background-color: #261447;
+   /* background-color: #261447; */
    height: 100px;
 }
 #navbarNav{
@@ -181,9 +181,29 @@ li {
    margin-top: 100px;
    margin-bottom: 70px;
  }
+ .container-fluid{
+   height: 1220px;
+   flex-direction: row;
+ }
+ .container-fluid .row{
+   /* border: solid 2px #f6019d; */
+   height: 600px;
+   margin: 10px;
 
- .conteudo-membros{
-   /* background-color: #f6019c27; */
+ }
+ .container-fluid .row .col-4{
+   /* border: #2de2e6 solid 5px; */
+   height: 500px;
+ }
+ .container-fluid .row .col-4 img{
+   height: 100%;
+   width: 100%;
+   border-radius: 50%;
+   border: solid 5px #f6019d;
+ }
+
+ /* .conteudo-membros{
+   background-color: #f6019c27; 
    width: 100%;
    height: 500px;
    display: flex;
@@ -205,10 +225,10 @@ li {
 }
 
 .carousel-inner{
-   /* background-color: aqua; */
+   background-color: aqua; 
 }
 .carousel-inner img{
-   /* background-color: aqua; */
+background-color: aqua; 
    height: 500px;
    width: 500px;
 }
@@ -235,5 +255,5 @@ li {
 }
 .carousel-control-next{
    background-color:  #edf2f431;
-}
+} */
 
