--- a/css/sobre.css
+++ b/css/sobre.css
@@ -33,21 +33,18 @@ body{
    align-items: center;
    justify-content: center;
    list-style: none;
-   
+   padding-top: 25px;
 }
 li a{
    text-decoration: none;
    color: #f6019d;
    list-style: none;
-   padding-top: 20px;
-   
 }
 li a:hover{
    color: #2de2e6;
 }
 li {
    list-style-type: none;
-   padding-top: 35px;
  }
 
 .bg-body-tertiary{
@@ -85,7 +82,7 @@ li {
  }
  .logo-historia{
     width: 100%;
-    height: 100%;
+    height: 25%;
     background-image: url(imagens/logo.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -205,3 +202,59 @@ li {
    border-radius: 50%;
    border: solid 5px #f6019d;
  }
+
+ /* .conteudo-membros{
+   background-color: #f6019c27; 
+   width: 100%;
+   height: 500px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   overflow-y: hidden;
+ }
+ 
+.conteudo-membros .carousel{
+   width: 30%;
+   height: 100%;
+   transition: 1s;
+   border: solid 2px #f6019d;
+   
+}
+.conteudo-membros .carousel:hover{
+   border: solid 2px #2de2e6;
+   transition: 1s;
+}
+
+.carousel-inner{
+   background-color: aqua; 
+}
+.carousel-inner img{
+background-color: aqua; 
+   height: 500px;
+   width: 500px;
+}
+.carousel-item{
+   background-color: black;
+}
+.carousel-inner h5{
+   color: #edf2f4;
+}
+.carousel-inner p{
+   color: #edf2f4;
+}
+.carousel-caption{
+   background-color: rgba(0, 0, 0, 0.507);
+   border-radius: 15px;
+   transition: 1s;
+}
+.carousel-caption:hover{
+   background-color: rgba(0, 0, 0, 0.767);
+}
+
+.carousel-control-prev{
+   background-color:  #edf2f434;
+}
+.carousel-control-next{
+   background-color:  #edf2f431;
+} */
+
