--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,21 @@ body{
     top: 3%;
     margin-top: -2.5em; 
  }
+ .logo-nav{
+    width: 200px;
+    /* background-color: #2de2e6; */
+    padding-top: 80px;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+.visivel {
+    opacity: 1;
+}
+
+ .logo-nav img{
+    height: 90%;
+    width: 100%;
+ }
  
 .bg-body-tertiary{
     --bs-bg-opacity: none !important;
@@ -41,7 +56,7 @@ body{
     align-items: center;
 }
 .navbar-nav{
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
